# the_edge_agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  OPTIONAL_DEPENDENCIES.md  README.md  docker-compose.yaml  llms.txt  mkdocs.yml  requirements.txt  setup.py
.bmad-core/: core-config.yaml  install-manifest.yaml
.claude/: settings.json
data/: action_inventory.json  action_inventory.yaml  game_phrases.json  validation_report.json
docker/: BUILD.md  Dockerfile  Dockerfile.base  Dockerfile.full  Dockerfile.gemma3-1b  Dockerfile.gemma3-4b  Dockerfile.gemma3n-e4b  Dockerfile.gemma4-e2b  Dockerfile.phi4-mini  Dockerfile.qwen3-8b  Dockerfile.rust-base  Dockerfile.rust-full  Dockerfile.rust-gemma3-1b  Dockerfile.rust-gemma3-4b  Dockerfile.rust-gemma3n-e4b  Dockerfile.rust-phi4-mini  Dockerfile.rust-qwen3-8b
docs/: YAML_AGENTS.md  YAML_REFERENCE.md  YAML_SPEC.md  _toc.yml  conf.py  index.md  installation.md  requirements.txt
examples/: README.md  llm_customer_support.py  nested_fanout_fanin_example.py  parallel_remote_distributed.yaml  parallel_strategies_demo.yaml  parity-test-interactive.yaml  perplexity_research_example.py  qa-neurosymbolic-wasm.yaml  requirements.txt  retail_sales_interviewer.yaml  run_yaml_agent.py  stream_example.py  truth-resolution-agent-neurosymbolic.yaml  truth-resolution-agent.yaml  two_different_flows_fanout_fanin_example.py  while-loop-parity-test.yaml  yaml_agent_example.yaml  yaml_customer_support_example.yaml  yaml_perplexity_example.yaml
python/: pytest.ini  setup.py
research/: FRAMEWORKS_QUICK_REFERENCE.md  LLM_FRAMEWORKS_COMPARISON.md  README.md  RESEARCH_SUMMARY.md  TEA_FRAMEWORK_STRATEGY.md
rust/: CHANGELOG.md  Cargo.lock.orig  Cargo.toml  README.md  build.rs
rust/.cargo/: config.toml
rust/benches/: graph_benchmarks.rs  scryer_benchmarks.rs
rust/examples/: basic_graph.rs  checkpoint.rs  conditional_routing.rs  custom_actions.rs  streaming.rs
rust/examples/wasm-spike/: Cargo.toml  index.html
rust/examples/wasm-spike/src/: checkpoint.rs  http.rs  lib.rs  llm.rs
rust/scripts/: generate_word_embeddings.py
rust/src/: error.rs  lib.rs
rust/src/actions/: a2a.rs  agent.rs  data.rs  file.rs  http.rs  llm.rs  llm_backend.rs  llm_local.rs  markdown.rs  memory.rs  mod.rs  planning.rs  ratelimit.rs  reasoning.rs  reflection.rs
rust/src/engine/: checkpoint.rs  deep_merge.rs  executor.rs  graph.rs  lua_runtime.rs  mod.rs  observability.rs  parallel.rs  prolog_runtime.rs  retry.rs  tea_prolog_predicates.pl  yaml.rs  yaml_builder.rs  yaml_config.rs  yaml_edges.rs  yaml_nodes.rs  yaml_templates.rs
rust/src/engine/a2a/: channel.rs  design.md  discovery.rs  message.rs  mod.rs  persistence.rs  shared_state.rs
rust/src/experiments/: dataset.rs  metrics.rs  mod.rs  runner.rs
rust/src/games/: db.rs  embeddings.rs  engine.rs  mod.rs  opik.rs  phrase_generator.rs
rust/src/prolog/: mod.rs  scryer_backend.rs
rust/src/remote/: cache.rs  cloud.rs  git.rs  mod.rs  traits.rs
rust/src/report/: capture.rs  cli.rs  encoder.rs  mod.rs  tests.rs
rust/tea-wasm-llm/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TERA_TEMPLATES_REPORT.md  build.sh  package.json  playwright.config.ts  test-memory.mjs  vitest.config.ts
rust/tea-wasm-llm/examples/: game-demo.html
rust/tea-wasm-llm/js/: duckdb-loader.ts  index.ts  ltm-loader.ts  model-cache.ts  model-loader.ts  tsconfig.json  wllama-loader.ts
rust/tea-wasm-llm/models/: .gitkeep  model-manifest.example.json
rust/tea-wasm-llm/playwright-report/: index.html
rust/tea-wasm-llm/scripts/: bundle-for-demo.cjs  copy-wllama-assets.sh  download-model-gemma3-1b.sh  download-model.sh
rust/tea-wasm-llm/src/: config.rs  duckdb.rs  executor.rs  game.rs  game_opik.rs  lib.rs  llm.rs  ltm.rs  lua.rs  markdown.rs  opik.rs  parallel.rs  params.rs  prolog.rs  routing.rs  storage.rs  templates.rs
rust/tea-wasm-llm/test-results/game-ui-TEA-Game-UI-E2E-Te-84dbc-ists-alongside-Workflow-tab-chromium/: error-context.md
rust/tea-wasm-llm/test-results/wasm-llm-LLM-Workflow-Exec-17a7e-execute-simple-LLM-workflow-chromium/: error-context.md
rust/tea-wasm-llm/test-results/wasm-llm-LLM-Workflow-Exec-3acd5-workflow-with-initial-state-chromium/: error-context.md
rust/tea-wasm-llm/tests/: duckdb.spec.ts  ltm.spec.ts  memory-debug.spec.ts  model-cache-test.html  model-cache.test.ts  server.js  storage.spec.ts  test.html  test_config_parsing.rs  test_examples.rs  test_parallel.rs  test_params.rs  test_routing.rs  test_templates.rs  tiny-model-test.html  tiny-model-test.js  wllama-loader.test.ts
rust/tea-wasm-llm/tests/e2e/: duckdb-test-page.html  game-test-page.html  game-ui.spec.ts  game.spec.ts  lua-prolog.spec.ts  test-page.html  wasm-llm.spec.ts
rust/tea-wasm-llm/tests/fixtures/: simple-workflow.yaml
rust/tests/: test_actions.rs  test_checkpoint.rs  test_cli.rs  test_cli_overlay.rs  test_cli_parity.rs  test_experiments.rs  test_goto_timing.rs  test_http_direct.rs  test_lua_runtime.rs  test_markdown_actions.rs  test_mermaid_export.rs  test_observability.rs  test_phrase_generator.rs  test_prolog_parity.rs  test_prolog_runtime.rs  test_ratelimit.rs  test_remote.rs  test_stategraph.rs  test_while_loop.rs  test_yaml_engine.rs
rust/tests/fixtures/: goto_parity_test.yaml  interactive_interview.yaml  interruptible_workflow.yaml  invalid_workflow.yaml  simple_workflow.yaml
scripts/: QUICK_REFERENCE.md  README.md  batch_update_stories.py  extract_action_signatures.py  generate_game_phrases.py  install.ps1  install.sh  parity-test.sh  release.sh  run-validations.sh  status_updates_template.csv  story_status_audit.py  update-tea-local.sh
src/: lib.rs
tests/: conftest.py  conftest_memory_actions.py  stategraph_main.py  test_interrupt_state_update.py  test_litestream_backend.py  test_llm_call_consolidation.py  test_ltm_integration.py  test_opik_configuration.py  test_opik_exporter.py  test_opik_llm_tracing.py  test_overlay_parity.py  test_query_engine_circuit_breaker.py  test_session_actions.py  test_stategraph.py  test_stategraph_checkpoint.py  test_stategraph_core.py  (+15 more)
(+1769 files in other folders)
