[package]
name = "the_edge_agent"
version = "0.8.6"
edition = "2021"
authors = ["The Edge Agent Contributors"]
description = "Lightweight state graph workflow engine for edge computing"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fabceolin/the_edge_agent"
keywords = ["workflow", "state-machine", "graph", "edge-computing", "lua"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "the_edge_agent"
path = "src/lib.rs"

[[bin]]
name = "tea"
path = "src/bin/tea.rs"

[dependencies]
# Core graph data structure
petgraph = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rmp-serde = "1.3"  # MessagePack - self-describing binary format (like pickle)

# Template engine (Jinja-like syntax)
tera = "1.19"

# Lua scripting
mlua = { version = "0.9", features = ["lua54", "vendored", "serialize"] }

# Parallel execution
rayon = "1.10"
crossbeam = "0.8"

# HTTP client (blocking for simplicity)
# NOTE: rustls-tls is needed for HTTPS; for local HTTP (e.g., Ollama), plain HTTP works
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1"

# Data processing
csv = "1.3"
jmespath = "0.3"
jsonschema = "0.24"

# Async runtime (for HTTP)
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
# Testing
tempfile = "3.14"
pretty_assertions = "1.4"
criterion = "0.5"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = ["memory", "trace", "data", "llm"]
memory = []
trace = []
data = []
web = []
rag = []
llm = []
code = []
prolog = ["dep:swipl"]
ltm-duckdb = ["dep:duckdb"]
graph = ["dep:cozo"]
all = ["memory", "trace", "data", "web", "rag", "llm", "code", "prolog", "ltm-duckdb", "graph"]

[dependencies.duckdb]
version = "1.1"
optional = true

[dependencies.cozo]
version = "0.7"
optional = true

# Prolog support (SWI-Prolog bindings)
[dependencies.swipl]
version = "0.3"
optional = true

[[bench]]
name = "graph_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
