[package]
name = "tea-wasm-llm"
version = "0.1.0"
edition = "2021"
description = "WASM LLM package for The Edge Agent with wllama integration"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings - pinned to 0.2.92 to avoid externref table issues in some browsers
wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "=0.4.42"
js-sys = "=0.3.69"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "2.0"

# Regex (WASM compatible, no std dependency)
regex-lite = "0.1"

# WASM-compatible random generation
getrandom = { version = "0.2", features = ["js"] }

# Panic hook for better error messages
console_error_panic_hook = "0.1.7"

# Web APIs - pinned to match wasm-bindgen version
[dependencies.web-sys]
version = "=0.3.69"
features = [
    "console",
    "Window",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "=0.3.42"

[profile.release]
opt-level = "s"
lto = true
